chore(release): Update release workflow for x86-64 binary
Replaced the release creation step with a dedicated upload action.

- Replaced the `softprops/action-gh-release@v1` action with
  `svenstaro/upload-release-action@v2` in
  `.github/workflows/release.yml`.
- Removed release name generation and instead use file upload
  with the specific name `pwrctl-${{ github.ref_name }}`.
- Removed the `generate_release_notes: true` parameter and the `files` parameter.
- Added `repo_token` and `tag` parameters to the upload action.
- The workflow now specifically uploads the `dist/pwrctl`
  binary as a release asset.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,13 +33,10 @@ jobs:
       run: |
         make build
 
-    - name: Create Release and Upload Asset
-      uses: softprops/action-gh-release@v1
+    - name: Upload x86-64 binary
+      uses: svenstaro/upload-release-action@v2
       with:
-        tag_name: ${{ github.ref_name }}
-        name: ${{ github.ref_name }}
-        generate_release_notes: true
-        files: |
-          dist/pwrctl
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: dist/pwrctl
+        asset_name: pwrctl-${{ github.ref_name }}
+        tag: ${{ github.ref }}
