WIP feat(power): Implement power source monitoring and UI updates
Implemented power source monitoring using UPower D-Bus signals to detect
when the device switches between battery and AC power.

- Added QDBus related includes to `main.hpp` to handle D-Bus signals:
    `#include <QDBusConnection>`, `#include <QDBusInterface>`,
    `#include <QDBusMessage>`, `#include <QDBusPendingCallWatcher>`.

-  Added a `powerSourceChanged` signal to `Application` class in `main.hpp` to
    notify about power source change events.

- Added `setupPowerMonitoring()` and `handleDBusSignal()` private methods to
    `Application` class in `main.hpp` for D-Bus signal handling.

- Added a boolean `m_onBattery` member to `Application` class in `main.hpp` to
    keep track of current power state.

- In `main.cpp`:
    - Connected to UPower D-Bus signals to listen for power changes.
    - Implemented signal handling in `handleDBusSignal()` to capture
      power source changes, update `m_onBattery` and trigger
      `powerSourceChanged` signal.
    - Added debug output with a formatted timestamp log message.
    - Output the same log message with timestamp to std::cout.

- In `Application` constructor within `main.cpp`:
    - Established connections for save and cancel buttons.
    - Call `setupPowerMonitoring` to initialize the D-Bus connection.
    - Connected a lambda to `powerSourceChanged` signal to update the UI:
        - Dynamically updates the font weight of display labels to
          indicate the active power source.
        - Updates the window title to indicate the current power source.

- CMakeLists.txt: Added Qt6::DBus to the required components and linked
    the library to the application.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets DBus)
 
 qt_add_executable(pwrctl
     main.hpp main.cpp
@@ -26,6 +26,7 @@ target_link_libraries(pwrctl PRIVATE
     Qt6::Core
     Qt6::Gui
     Qt6::Widgets
+    Qt6::DBus
 )
 
 install(TARGETS pwrctl DESTINATION bin)
