--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_AUTOUIC ON)
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets DBus)
 
 qt_add_executable(pwrctl
-    main.hpp main.cpp
+    main.hpp main.cpp powerprofile.hpp powerprofile.cpp
 )
 
 qt_add_resources(pwrctl "resources"
