feat(power): Implement LogindManager and SwayIdleManager
Adds LogindManager and SwayIdleManager classes for handling
logind and swayidle configurations, respectively. Includes
header and source files for each manager, along with initial
methods for parsing and applying configurations. These are
currently placeholders and need to be implemented.

- Added `logindmanager.hpp` and `logindmanager.cpp`: Defines
  the `LogindManager` class with methods to parse and apply
  logind configurations.  The `parseConfig` and `applyConfig`
  methods are currently placeholders.

- Added `swayidlemanager.hpp` and `swayidlemanager.cpp`:
  Defines the `SwayIdleManager` class with methods to parse and
  apply swayidle configurations.  The `parseConfig` and
  `applyConfig` methods are currently placeholders.

- Modified `CMakeLists.txt`: Added the new
  `logindmanager.hpp`, `logindmanager.cpp`,
  `swayidlemanager.hpp`, and `swayidlemanager.cpp` files to the
  build process.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,11 @@ set(CMAKE_AUTOUIC ON)
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets DBus)
 
 qt_add_executable(pwrctl
-    main.hpp main.cpp powerprofile.hpp powerprofile.cpp batterymanager.hpp batterymanager.cpp
+    main.hpp main.cpp
+    powerprofile.hpp powerprofile.cpp
+    batterymanager.hpp batterymanager.cpp
+    swayidlemanager.hpp swayidlemanager.cpp
+    logindmanager.hpp logindmanager.cpp
 )
 
 qt_add_resources(pwrctl "resources"
