feat(gui): Implement QOrderedMap and populate dropdowns
Implement the QOrderedMap data structure and use it to populate
the dropdown menus in the GUI.

- Add `QOrderedMap.h` to provide an ordered map
  implementation based on Qt containers.  This allows maintaining
  insertion order while providing fast lookups.

- Modify `CMakeLists.txt` to include the new `QOrderedMap.h` file
  in the build process.

- Refactor `main.cpp` to use `QOrderedMap` for storing timeout
  values.  This ensures that the order of timeout options in the
  dropdowns is consistent and predictable.

- Update `main.cpp` to populate the dropdown menus for display
  timeout, sleep timeout, and lid close action using the keys from
  the `timeouts` QOrderedMap. This change replaces the hardcoded
  lists with values from the `timeouts` map, making it easier to
  manage and modify the options.

- Remove unused `#include <cstdint>` from `main.cpp`

This commit introduces `QOrderedMap` for managing ordered data and
populates dropdown menus in the GUI with values derived from it,
enhancing maintainability and user experience.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_AUTOUIC ON)
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets DBus)
 
 qt_add_executable(pwrctl
+    QOrderedMap.h
     main.hpp main.cpp
     powerprofile.hpp powerprofile.cpp
     batterymanager.hpp batterymanager.cpp
