fix(build): Correctly set C++ compiler and remove DBus dependency
Fixes the build process by explicitly setting the C++ compiler to
`clang++` in the `CMakeLists.txt` file. This ensures that the
project is compiled with the correct compiler, resolving potential
build issues related to compiler selection.

- Modified `CMakeLists.txt` to include `set(CMAKE_CXX_COMPILER
  clang++)`. This explicitly sets the C++ compiler to `clang++`.
- Removed the DBus components form `find_package` and target_link_libraries
  because it is unused.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,13 @@ project(pwrctl VERSION 0.1.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_C_COMPILER clang)
+set(CMAKE_CXX_COMPILER clang++)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets DBus)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 
 qt_add_executable(pwrctl
     QOrderedMap.h
@@ -31,7 +33,6 @@ target_link_libraries(pwrctl PRIVATE
     Qt6::Core
     Qt6::Gui
     Qt6::Widgets
-    Qt6::DBus
 )
 
 install(TARGETS pwrctl DESTINATION bin)
